gjorde om till ts. fixade fel på nån endpoint. detta är tom kap 2 i kursen(med lite extra, ex swagger)
