# src/routes/crmRoutes.ts
@@ -5,32 +5,30 @@ import {
     updateContact,
     deleteContact 
 } from '../controllers/crmController.js';
-
-const routes = (app) => {
+import express, { Request, Response, Application} from 'express';
+const routes = (app:express.Application) => {
     app.route('/contact')
-    .get((req, res, next) => {
+    .get((req:Request, res:Response, next: any) => {
         // middleware
         console.log(`Request from: ${req.originalUrl}`)
         console.log(`Request type: ${req.method}`)
         next();
     }, getContacts)
-    
     // POST endpoint
-    .post((req,res)=>{
-        /*  #swagger.parameters['body'] = {
-            in: 'body',
-            description: 'Add new user.',
-            schema: {
-    $firstName: 'dffs',
-    $lastName: 'fghfgh',
-    $email: '',
-    $company: '',
-    $phone: 46454,
-    $created_date: ''
-}
+    .post((req:Request, res:Response)=>{
+    /*  #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Add new user.',
+        schema: {
+            $firstName: 'dffs',
+            $lastName: 'fghfgh',
+            $email: '',
+            $company: '',
+            $phone: 46454
+        }
     } */
         console.log(req+"kom in");
-        return res.json(addNewContact(req));
+        addNewContact(req).then(doc=>res.json(doc));
     });
 
     app.route('/contact/:contactId')
